--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ implementation 'org.springframework.boot:spring-boot-starter-validation'
 implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 implementation 'org.json:json:20171018'
 implementation 'mysql:mysql-connector-java'
+implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4' 
 implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
