--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ implementation group: 'com.googlecode.json-simple', name: 'json-simple', version
 developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 compileOnly('org.projectlombok:lombok')
-testImplementation("org.junit.jupiter:junit-jupiter-api:5.7.1")
+testImplementation("org.junit.jupiter:junit-jupiter-engine:5.6.1")
 testImplementation('org.mockito:mockito-junit-jupiter:2.23.0')
 testImplementation('org.springframework.boot:spring-boot-starter-test')
 
