implementate push notification quando un utente salva un post

--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ implementation 'org.json:json:20171018'
 implementation 'mysql:mysql-connector-java'
 implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4' 
 implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+implementation 'com.google.firebase:firebase-admin:8.1.0'
+
 developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 compileOnly('org.projectlombok:lombok')
